LFHCDESK-50: Adding Wong Baker faces and add i18n messages 	modified:   api/src/main/resources/messages.properties 	modified:   omod/src/main/webapp/resources/htmlforms/homecare-reg.html 	new file:   omod/src/main/webapp/resources/images/wong-baker-0.png 	new file:   omod/src/main/webapp/resources/images/wong-baker-10.png 	new file:   omod/src/main/webapp/resources/images/wong-baker-2.png 	new file:   omod/src/main/webapp/resources/images/wong-baker-4.png 	new file:   omod/src/main/webapp/resources/images/wong-baker-6.png 	new file:   omod/src/main/webapp/resources/images/wong-baker-8.png

--- a/omod/src/main/webapp/resources/htmlforms/homecare-reg.html
+++ b/omod/src/main/webapp/resources/htmlforms/homecare-reg.html
@@ -33,31 +33,56 @@ formDisplayStyle="Simple"
 				if ($(this).hasClass("selected")) {
 					$(".wong-baker-faces").removeClass("selected");
 					$(".wong-baker-faces").removeClass("greyed");
+					$(".wong-baker-faces").removeClass("icon-check");
+
+					$(".wong-baker-faces").addClass("icon-check-empty");
+
 					setValue("wb-score.value", "");	
 
 				} else  {
 					$(".wong-baker-faces").removeClass("selected");
+
+					$(".wong-baker-faces").removeClass("icon-check");
+					$(".wong-baker-faces").addClass("icon-check-empty");
+
 					setValue("wb-score.value", $(this).attr("value"));
 					$(this).addClass("selected");
+					$(this).addClass("icon-check");
+
 					$(this).removeClass("greyed");
+					$(this).removeClass("icon-check-empty");
 				}
 			})
 		});
 	</script>
 
 	<style type="text/css">
+
 		.wong-baker-faces {
-			opacity: 0.5;
-			font-size: x-large;
+			opacity: 0.8;
+			width:70px;
 		}
+
 		.hovered {
 			opacity: 1;
 		}
+
 		.selected {
-			opacity: 1;	
+			opacity: 1;
 		}
+		p > img{
+			margin-left:-12px;
+		}
+
+		p.hovered > img{
+		}
+
+		p.selected > img {
+		}
+
 		.greyed {		
 		}
+
 	</style>
 	
 </ifMode>
@@ -70,7 +95,6 @@ formDisplayStyle="Simple"
 		});
 	</script>
 </ifMode>
-
 
 <div class="hidden" id="who-when-where">
 	<p id="who">
@@ -111,12 +135,30 @@ formDisplayStyle="Simple"
 			<uimessage code="lfhcforms.homecare-regular-visit.legend.comfort-level" />
 		</h3>
 		<p style="margin-top:5%">
-			<span id="wb-smile" value="2" class="wong-baker-faces icon-faces-smile"/>
-			(2)
-			<span id="wb-neutral" value="4" class="wong-baker-faces icon-faces-neutral"/>
-			(4)
-			<span id="wb-sad" value="6" class="wong-baker-faces icon-faces-sad"/>
-			(6)
+			<p  class="wong-baker-faces icon-check-empty" value="0">
+				0
+				<img src="../../ms/uiframework/resource/lfhcforms/images/wong-baker-0.png" style="width:70px;"/> 
+			</p>
+			<p  class="wong-baker-faces icon-check-empty" value="2">
+				2
+				<img src="../../ms/uiframework/resource/lfhcforms/images/wong-baker-2.png" style="width:70px;"/> 
+			</p>
+			<p  class="wong-baker-faces icon-check-empty" value="4">
+				4
+				<img src="../../ms/uiframework/resource/lfhcforms/images/wong-baker-4.png" style="width:70px;"/> 
+			</p>
+			<p  class="wong-baker-faces icon-check-empty" value="6">
+				6
+				<img src="../../ms/uiframework/resource/lfhcforms/images/wong-baker-6.png" style="width:70px;"/> 
+			</p>
+			<p  class="wong-baker-faces icon-check-empty" value="8">
+				8
+				<img src="../../ms/uiframework/resource/lfhcforms/images/wong-baker-8.png" style="width:70px;"/> 
+			</p>
+			<p  class="wong-baker-faces icon-check-empty" value="10">
+				10
+				<img src="../../ms/uiframework/resource/lfhcforms/images/wong-baker-10.png" style="width:70px;"/> 
+			</p>
 		</p>
 		<p style="display:;">
 			<span id="wb-title">Wong baker score</span>
@@ -134,7 +176,7 @@ formDisplayStyle="Simple"
 			<uimessage code="lfhcforms.homecare-regular-visit.legend.general" />
 		</h3>
 		<p>
-			<obs conceptId="CIEL:159395" cols="40" rows="5" />
+			<obs conceptId="CIEL:1391" cols="40" rows="5" />
 		</p>
 	</fieldset>
 
@@ -147,7 +189,7 @@ formDisplayStyle="Simple"
 			<uimessage code="lfhcforms.homecare-regular-visit.legend.respiratory" />
 		</h3>
 		<p>
-			<obs conceptId="CIEL:159395" cols="40" rows="5" />
+			<obs conceptId="LFHC:1291" cols="40" rows="5" />
 		</p>
 	</fieldset>
 
@@ -160,7 +202,7 @@ formDisplayStyle="Simple"
 			<uimessage code="lfhcforms.homecare-regular-visit.legend.cardiovascular" />
 		</h3>
 		<p>
-			<obs conceptId="CIEL:159395" cols="40" rows="5" />
+			<obs conceptId="LFHC:1177" cols="40" rows="5" />
 		</p>
 	</fieldset>
 
@@ -173,7 +215,7 @@ formDisplayStyle="Simple"
 			<uimessage code="lfhcforms.homecare-regular-visit.legend.digestive" />
 		</h3>
 		<p>
-			<obs conceptId="CIEL:159395" cols="40" rows="5" />
+			<obs conceptId="LFHC:1292" cols="40" rows="5" />
 		</p>
 	</fieldset>
 
@@ -186,7 +228,7 @@ formDisplayStyle="Simple"
 			<uimessage code="lfhcforms.homecare-regular-visit.legend.other" />
 		</h3>
 		<p>
-			<obs conceptId="CIEL:159395" cols="40" rows="5" />
+			<obs conceptId="LFHC:1293" cols="40" rows="5" />
 		</p>
 	</fieldset>
 
@@ -196,13 +238,13 @@ formDisplayStyle="Simple"
 	<!-- Medication fieldset -->
 	<fieldset field-separator=", ">
 		<legend>
-			<uimessage code="lfhcforms.homecare-regular-visit.legend.medication" />
+			<uimessage code="lfhcforms.homecare-regular-visit.section.medication" />
 		</legend>
 		<h3>
-			<uimessage code="lfhcforms.homecare-regular-visit.legend.medication" />
+			<uimessage code="lfhcforms.homecare-regular-visit.section.medication" />
 		</h3>
 		<p>
-			<obs conceptId="CIEL:159395" cols="40" rows="5" />
+			<obs conceptId="CIEL:162165" cols="40" rows="5" />
 		</p>
 	</fieldset>
 	
@@ -224,13 +266,13 @@ formDisplayStyle="Simple"
 	<!-- Nutrition fieldset -->
 	<fieldset field-separator=", ">
 		<legend>
-			<uimessage code="lfhcforms.homecare-regular-visit.legend.nutrition" />
+			<uimessage code="lfhcforms.homecare-regular-visit.section.nutrition" />
 		</legend>
 		<h3>
-			<uimessage code="lfhcforms.homecare-regular-visit.legend.nutrition" />
+			<uimessage code="lfhcforms.homecare-regular-visit.section.nutrition" />
 		</h3>
 		<p>
-			<obs conceptId="CIEL:159395" cols="40" rows="5" />
+			<obs conceptId="LFHC:1295" cols="40" rows="5" />
 		</p>
 	</fieldset>
 </section>
@@ -239,10 +281,10 @@ formDisplayStyle="Simple"
 	<!-- Psycho socio-financial assessment fieldset -->
 	<fieldset field-separator=", ">
 		<legend>
-			<uimessage code="lfhcforms.homecare-regular-visit.legend.psycho-socio-financial-assessment" />
+			<uimessage code="lfhcforms.homecare-regular-visit.section.psycho-socio-financial-assessment" />
 		</legend>
 		<h3>
-			<uimessage code="lfhcforms.homecare-regular-visit.legend.psycho-socio-financial-assessment" />
+			<uimessage code="lfhcforms.homecare-regular-visit.section.psycho-socio-financial-assessment" />
 		</h3>
 		<p>
 			<obs conceptId="CIEL:159395" cols="40" rows="5" />
@@ -250,7 +292,194 @@ formDisplayStyle="Simple"
 	</fieldset>
 </section>
 
+<section id="nursing-implemenation" sectionTag="section" headerStyle="title" headerCode="lfhcforms.homecare-regular-visit.section.nursing-implementation">
+	<!-- Physical Exam Completed fieldset -->
+	<fieldset field-separator=", ">
+		<legend>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.physical-exam-completed" />
+		</legend>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.physical-exam-completed" />
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1223" />
+		</p>
+	</fieldset>
 
-<submit />
+	<!-- Physical Exam Comments fieldset -->
+	<fieldset field-separator=", ">
+		<legend>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.physical-exam-comments" />
+		</legend>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.physical-exam-comments" />
+		</h3>
+		<p>
+			<obs conceptId="CIEL:1391" cols="40" rows="5" />
+		</p>
+	</fieldset>
 
-</htmlform>
+	<!-- Adherence checked fieldset -->
+	<fieldset field-separator=", ">
+		<legend>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.adherence-checked" />
+		</legend>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.adherence-checked" />
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1224"/>
+		</p>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.poor-adherence-reason" />
+		</h3>
+		<p>Wrong concept. Waiting for Cheri's feedback
+		<!-- Wrong concept. Waiting for Cheri's feedback
+					<obs conceptId="CIEL:162582" />
+				-->
+			</p>
+			<h3>
+				<uimessage code="lfhcforms.homecare-regular-visit.legend.adherence-comments" />
+			</h3>
+			<p>
+				<obs conceptId="LFHC:1294" cols="40" rows="5" />
+			</p>
+		</fieldset>
+
+		<!-- Growth measured and plotted fieldset -->
+		<fieldset field-separator=", ">
+			<legend>
+				<uimessage code="lfhcforms.homecare-regular-visit.legend.growth-measured" />
+			</legend>
+			<h3>
+				<uimessage code="lfhcforms.homecare-regular-visit.legend.growth-measured" />
+			</h3>
+			<p>
+				<obs conceptId="LFHC:1225" />
+			</p>
+			<h3>
+				<uimessage code="lfhcforms.homecare-regular-visit.legend.growth-comments" />
+			</h3>
+			<p>
+				<obs conceptId="LFHC:1296" cols="40" rows="5" />
+			</p>
+		</fieldset>
+
+		<!-- Development assessed fieldset -->
+		<fieldset field-separator=", ">
+			<legend>
+				<uimessage code="lfhcforms.homecare-regular-visit.legend.development-assessed" />
+			</legend>
+			<h3>
+				<uimessage code="lfhcforms.homecare-regular-visit.legend.development-assessed" />
+			</h3>
+			<p>
+				<obs conceptId="LFHC:1226" />
+			</p>
+			<h3>
+				<uimessage code="lfhcforms.homecare-regular-visit.legend.development-notes" />
+			</h3>
+			<p>
+				<obs conceptId="LFHC:1297" cols="40" rows="5" />
+			</p>
+		</fieldset>
+
+
+		<!-- Food support provided fieldset -->
+		<fieldset field-separator=", ">
+			<legend>
+				<uimessage code="lfhcforms.homecare-regular-visit.legend.food-support-provided" />
+			</legend>
+			<h3>
+				<uimessage code="lfhcforms.homecare-regular-visit.legend.food-support-provided" />
+			</h3>
+			<p>
+				<obs conceptId="LFHC:1227" />
+			</p>
+			<h3>
+				<uimessage code="lfhcforms.homecare-regular-visit.legend.food-support-notes" />
+			</h3>
+			<p>
+				<obs conceptId="LFHC:1298" cols="40" rows="5" />
+			</p>
+		</fieldset>
+
+		<!-- Hygiene supplies provided fieldset -->
+		<fieldset field-separator=", ">
+			<legend>
+				<uimessage code="lfhcforms.homecare-regular-visit.legend.hygiene-supplies-provided" />
+			</legend>
+			<h3>
+				<uimessage code="lfhcforms.homecare-regular-visit.legend.hygiene-supplies-provided" />
+			</h3>
+			<p>
+				<obs conceptId="LFHC:1228" />
+			</p>
+			<h3>
+				<uimessage code="lfhcforms.homecare-regular-visit.legend.hygien-supplies-notes" />
+			</h3>
+			<p>
+				<obs conceptId="LFHC:1299" cols="40" rows="5" />
+			</p>
+		</fieldset>
+	</section>
+
+	<section id="next-visit-plan" sectionTag="section" headerStyle="title" headerCode="lfhcforms.homecare-regular-visit.section.next-visit-plan">
+		<!-- Next visit plan fieldset -->
+		<fieldset field-separator=", ">
+			<legend>
+				<uimessage code="lfhcforms.homecare-regular-visit.section.next-visit-plan" />
+			</legend>
+			<h3>
+				<uimessage code="lfhcforms.homecare-regular-visit.section.next-visit-plan" />
+			</h3>
+			<p>
+				<obs conceptId="LFHC:1229" cols="40" rows="5" />
+			</p>
+		</fieldset>
+
+		<!-- Next visit date fieldset -->
+		<fieldset field-separator=", ">
+			<legend>
+				<uimessage code="lfhcforms.homecare-regular-visit.legend.next-visit-plan-date" />
+			</legend>
+			<h3>
+				<uimessage code="lfhcforms.homecare-regular-visit.legend.next-visit-plan-date" />
+			</h3>
+			<p>
+				<obs conceptId="CIEL:5096" />
+			</p>
+		</fieldset>
+
+		<!-- Goal continued fieldset -->
+		<fieldset field-separator=", ">
+			<legend>
+				<uimessage code="lfhcforms.homecare-regular-visit.legend.goal-continued" />
+			</legend>
+			<h3>
+				<uimessage code="lfhcforms.homecare-regular-visit.legend.goal-continued" />
+			</h3>
+			<p>
+				<obs conceptId="LFHC:1233" cols="40" rows="5" />
+			</p>
+		</fieldset>
+	</section>
+
+	<section id="discharge-education" sectionTag="section" headerStyle="title" headerCode="lfhcforms.homecare-regular-visit.section.discharge-education">
+		<!-- Discharge education fieldset -->
+		<fieldset field-separator=", ">
+			<legend>
+				<uimessage code="lfhcforms.homecare-regular-visit.section.discharge-education" />
+			</legend>
+			<h3>
+				<uimessage code="lfhcforms.homecare-regular-visit.section.discharge-education" />
+			</h3>
+			<p>
+				<obs conceptId="LFHC:1234" cols="40" rows="5" />
+			</p>
+		</fieldset>
+	</section>
+
+	<submit />
+
+	</htmlform>
