LFHCDESK-50: Incorrect concept mapping for "Poor Adherence Reason"

--- a/omod/src/main/webapp/resources/htmlforms/homecare-reg.html
+++ b/omod/src/main/webapp/resources/htmlforms/homecare-reg.html
@@ -333,153 +333,151 @@ formDisplayStyle="Simple"
 		<h3>
 			<uimessage code="lfhcforms.homecare-regular-visit.legend.poor-adherence-reason" />
 		</h3>
-		<p>Wrong concept. Waiting for Cheri's feedback
-		<!-- Wrong concept. Waiting for Cheri's feedback
-					<obs conceptId="CIEL:162582" />
-				-->
-			</p>
-			<h3>
-				<uimessage code="lfhcforms.homecare-regular-visit.legend.adherence-comments" />
-			</h3>
-			<p>
-				<obs conceptId="LFHC:1294" cols="40" rows="5" />
-			</p>
-		</fieldset>
+		<p>
+			<obs conceptId="CIEL:160582" cols="40" rows="5" />
+		</p>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.adherence-comments" />
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1294" cols="40" rows="5" />
+		</p>
+	</fieldset>
 
-		<!-- Growth measured and plotted fieldset -->
-		<fieldset field-separator=", ">
-			<legend>
-				<uimessage code="lfhcforms.homecare-regular-visit.legend.growth-measured" />
-			</legend>
-			<h3>
-				<uimessage code="lfhcforms.homecare-regular-visit.legend.growth-measured" />
-			</h3>
-			<p>
-				<obs conceptId="LFHC:1225" />
-			</p>
-			<h3>
-				<uimessage code="lfhcforms.homecare-regular-visit.legend.growth-comments" />
-			</h3>
-			<p>
-				<obs conceptId="LFHC:1296" cols="40" rows="5" />
-			</p>
-		</fieldset>
+	<!-- Growth measured and plotted fieldset -->
+	<fieldset field-separator=", ">
+		<legend>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.growth-measured" />
+		</legend>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.growth-measured" />
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1225" />
+		</p>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.growth-comments" />
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1296" cols="40" rows="5" />
+		</p>
+	</fieldset>
 
-		<!-- Development assessed fieldset -->
-		<fieldset field-separator=", ">
-			<legend>
-				<uimessage code="lfhcforms.homecare-regular-visit.legend.development-assessed" />
-			</legend>
-			<h3>
-				<uimessage code="lfhcforms.homecare-regular-visit.legend.development-assessed" />
-			</h3>
-			<p>
-				<obs conceptId="LFHC:1226" />
-			</p>
-			<h3>
-				<uimessage code="lfhcforms.homecare-regular-visit.legend.development-notes" />
-			</h3>
-			<p>
-				<obs conceptId="LFHC:1297" cols="40" rows="5" />
-			</p>
-		</fieldset>
+	<!-- Development assessed fieldset -->
+	<fieldset field-separator=", ">
+		<legend>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.development-assessed" />
+		</legend>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.development-assessed" />
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1226" />
+		</p>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.development-notes" />
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1297" cols="40" rows="5" />
+		</p>
+	</fieldset>
 
 
-		<!-- Food support provided fieldset -->
-		<fieldset field-separator=", ">
-			<legend>
-				<uimessage code="lfhcforms.homecare-regular-visit.legend.food-support-provided" />
-			</legend>
-			<h3>
-				<uimessage code="lfhcforms.homecare-regular-visit.legend.food-support-provided" />
-			</h3>
-			<p>
-				<obs conceptId="LFHC:1227" />
-			</p>
-			<h3>
-				<uimessage code="lfhcforms.homecare-regular-visit.legend.food-support-notes" />
-			</h3>
-			<p>
-				<obs conceptId="LFHC:1298" cols="40" rows="5" />
-			</p>
-		</fieldset>
+	<!-- Food support provided fieldset -->
+	<fieldset field-separator=", ">
+		<legend>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.food-support-provided" />
+		</legend>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.food-support-provided" />
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1227" />
+		</p>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.food-support-notes" />
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1298" cols="40" rows="5" />
+		</p>
+	</fieldset>
 
-		<!-- Hygiene supplies provided fieldset -->
-		<fieldset field-separator=", ">
-			<legend>
-				<uimessage code="lfhcforms.homecare-regular-visit.legend.hygiene-supplies-provided" />
-			</legend>
-			<h3>
-				<uimessage code="lfhcforms.homecare-regular-visit.legend.hygiene-supplies-provided" />
-			</h3>
-			<p>
-				<obs conceptId="LFHC:1228" />
-			</p>
-			<h3>
-				<uimessage code="lfhcforms.homecare-regular-visit.legend.hygien-supplies-notes" />
-			</h3>
-			<p>
-				<obs conceptId="LFHC:1299" cols="40" rows="5" />
-			</p>
-		</fieldset>
-	</section>
+	<!-- Hygiene supplies provided fieldset -->
+	<fieldset field-separator=", ">
+		<legend>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.hygiene-supplies-provided" />
+		</legend>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.hygiene-supplies-provided" />
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1228" />
+		</p>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.hygien-supplies-notes" />
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1299" cols="40" rows="5" />
+		</p>
+	</fieldset>
+</section>
 
-	<section id="next-visit-plan" sectionTag="section" headerStyle="title" headerCode="lfhcforms.homecare-regular-visit.section.next-visit-plan">
-		<!-- Next visit plan fieldset -->
-		<fieldset field-separator=", ">
-			<legend>
-				<uimessage code="lfhcforms.homecare-regular-visit.section.next-visit-plan" />
-			</legend>
-			<h3>
-				<uimessage code="lfhcforms.homecare-regular-visit.section.next-visit-plan" />
-			</h3>
-			<p>
-				<obs conceptId="LFHC:1229" cols="40" rows="5" />
-			</p>
-		</fieldset>
+<section id="next-visit-plan" sectionTag="section" headerStyle="title" headerCode="lfhcforms.homecare-regular-visit.section.next-visit-plan">
+	<!-- Next visit plan fieldset -->
+	<fieldset field-separator=", ">
+		<legend>
+			<uimessage code="lfhcforms.homecare-regular-visit.section.next-visit-plan" />
+		</legend>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.section.next-visit-plan" />
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1229" cols="40" rows="5" />
+		</p>
+	</fieldset>
 
-		<!-- Next visit date fieldset -->
-		<fieldset field-separator=", ">
-			<legend>
-				<uimessage code="lfhcforms.homecare-regular-visit.legend.next-visit-plan-date" />
-			</legend>
-			<h3>
-				<uimessage code="lfhcforms.homecare-regular-visit.legend.next-visit-plan-date" />
-			</h3>
-			<p>
-				<obs conceptId="CIEL:5096" />
-			</p>
-		</fieldset>
+	<!-- Next visit date fieldset -->
+	<fieldset field-separator=", ">
+		<legend>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.next-visit-plan-date" />
+		</legend>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.next-visit-plan-date" />
+		</h3>
+		<p>
+			<obs conceptId="CIEL:5096" />
+		</p>
+	</fieldset>
 
-		<!-- Goal continued fieldset -->
-		<fieldset field-separator=", ">
-			<legend>
-				<uimessage code="lfhcforms.homecare-regular-visit.legend.goal-continued" />
-			</legend>
-			<h3>
-				<uimessage code="lfhcforms.homecare-regular-visit.legend.goal-continued" />
-			</h3>
-			<p>
-				<obs conceptId="LFHC:1233" cols="40" rows="5" />
-			</p>
-		</fieldset>
-	</section>
+	<!-- Goal continued fieldset -->
+	<fieldset field-separator=", ">
+		<legend>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.goal-continued" />
+		</legend>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.legend.goal-continued" />
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1233" cols="40" rows="5" />
+		</p>
+	</fieldset>
+</section>
 
-	<section id="discharge-education" sectionTag="section" headerStyle="title" headerCode="lfhcforms.homecare-regular-visit.section.discharge-education">
-		<!-- Discharge education fieldset -->
-		<fieldset field-separator=", ">
-			<legend>
-				<uimessage code="lfhcforms.homecare-regular-visit.section.discharge-education" />
-			</legend>
-			<h3>
-				<uimessage code="lfhcforms.homecare-regular-visit.section.discharge-education" />
-			</h3>
-			<p>
-				<obs conceptId="LFHC:1234" cols="40" rows="5" />
-			</p>
-		</fieldset>
-	</section>
+<section id="discharge-education" sectionTag="section" headerStyle="title" headerCode="lfhcforms.homecare-regular-visit.section.discharge-education">
+	<!-- Discharge education fieldset -->
+	<fieldset field-separator=", ">
+		<legend>
+			<uimessage code="lfhcforms.homecare-regular-visit.section.discharge-education" />
+		</legend>
+		<h3>
+			<uimessage code="lfhcforms.homecare-regular-visit.section.discharge-education" />
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1234" cols="40" rows="5" />
+		</p>
+	</fieldset>
+</section>
 
-	<submit />
+<submit />
 
-	</htmlform>
+</htmlform>
