LFHCDESK-50: Add more fields to the Homecare Pre-assessment form

--- a/omod/src/main/webapp/resources/htmlforms/homecare-reg.html
+++ b/omod/src/main/webapp/resources/htmlforms/homecare-reg.html
@@ -88,7 +88,7 @@ formDisplayStyle="Simple"
 </ifMode>
 
 <ifMode mode="VIEW">
-	<script type="text/javascript" id="handleViewModeForTable">
+	<script type="text/javascript" id="handleViewMode">
 		// JavaScript for VIEW mode
 		jQuery(document).ready(function(){
 			handleViewMode("84e61aee-7d7f-4dfb-b305-7d59b89b762e");
