LFHCDESK-50: All sections done

--- a/omod/src/main/webapp/resources/htmlforms/homecare-pre-assessment.html
+++ b/omod/src/main/webapp/resources/htmlforms/homecare-pre-assessment.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="d242c101-72bd-43c0-b87d-ae105b64eacb" formName="Financial Assessment" formEncounterType="27c72549-481c-46be-ac32-5080669e2eef" formVersion="0.1"
+<htmlform formUuid="d242c101-72bd-43c0-b87d-ae105b64eacb" formName="Homecare Pre-assessment" formEncounterType="27c72549-481c-46be-ac32-5080669e2eef" formVersion="0.1"
 formAddMetadata="yes"
 formUILocation="patientDashboard.visitActions"
 formOrder="26"
